# blog-code-challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 53cb352fefec_create_blog_post_and_comment_tables.py
src/: logger.py  routers.py  settings.py
src/application/dependencies/: database.py  service.py
src/application/middlewares/: response.py
src/application/utils/: general.py
src/domain/entities/: blog_post.py  comment.py
src/domain/services/: base.py  blog_post.py  comment.py
src/infrastructure/database/: __init__.py  base_model.py  config.py  dependencies.py
src/infrastructure/database/models/: __init__.py  blog_post.py  comment.py
src/infrastructure/repositories/: base.py  blog_post.py  comment.py
src/presentation/dtos/: base.py  responses.py
src/presentation/schemas/: blog_post.py  comment.py
src/presentation/views/: blog_post.py  comment.py  health.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/entities/: test_blog_post_entity.py  test_comment_entity.py
tests/unit/repositories/: test_blog_post_repository.py  test_comment_repository.py
tests/unit/services/: test_services.py
