[tool.poetry]
name = "code-challenge"
version = "1.0"
description = "Code Challenge"
authors = ["Ylgner Becton"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.3.0"
pydantic-settings = "^2.1"
asgi-correlation-id = "^4.3.1"
sqlalchemy = "^2.0.36"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
pytz = "^2025.2"
psycopg2-binary = "^2.9.10"
google-cloud-storage = "^3.1.0"
pymysql = "^1.1.1"
cryptography = "^44.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.7"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
